@@ -31,7 +31,7 @@ Ubuntu / Raspberry Pi (wheezy):
 sudo apt-get install build-essential -y
 sudo apt-get install cmake libboost-dev libboost-thread-dev libboost-system-dev libsqlite3-dev subversion
 
-Raspberry Pi (wheezy, 22 November 2012): (First time compile time: 18 minutes)
+Raspberry Pi (wheezy, 22 November 2012): (First time compile time: 25 minutes)
 At this moment (First generation RPi (128MB) (And possible the last generation too), there is a issue with the FTDI drivers (USB).
 A quick fix it to add the following in front of /boot/cmdline.txt
 dwc_otg.speed=1
